--- a/Day 3/RF, NN and KMeans.ipynb
+++ b/Day 3/RF, NN and KMeans.ipynb
@@ -1362,6 +1362,17 @@
       "2023-10-26 16:56:32.494394: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/mzihayat/VSC/Introduction-to-Machine-Learning/Day 3/RF, NN and KMeans.ipynb Cell 67\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mzihayat/VSC/Introduction-to-Machine-Learning/Day%203/RF%2C%20NN%20and%20KMeans.ipynb#Y124sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(num_epochs):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mzihayat/VSC/Introduction-to-Machine-Learning/Day%203/RF%2C%20NN%20and%20KMeans.ipynb#Y124sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39m# Forward pass\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mzihayat/VSC/Introduction-to-Machine-Learning/Day%203/RF%2C%20NN%20and%20KMeans.ipynb#Y124sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39mwith\u001b[39;00m tf\u001b[39m.\u001b[39mGradientTape() \u001b[39mas\u001b[39;00m tape:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/mzihayat/VSC/Introduction-to-Machine-Learning/Day%203/RF%2C%20NN%20and%20KMeans.ipynb#Y124sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m         outputs \u001b[39m=\u001b[39m model(X_tensor)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mzihayat/VSC/Introduction-to-Machine-Learning/Day%203/RF%2C%20NN%20and%20KMeans.ipynb#Y124sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m         loss \u001b[39m=\u001b[39m criterion(y_tensor, outputs)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mzihayat/VSC/Introduction-to-Machine-Learning/Day%203/RF%2C%20NN%20and%20KMeans.ipynb#Y124sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39m# Backward pass and optimization\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
     }
    ],
    "source": [
