--- a/Day 1/AI_ML_Concepts.ipynb
+++ b/Day 1/AI_ML_Concepts.ipynb
@@ -23,26 +23,6 @@
     }
    },
    "source": [
-    "<a id=\"learning-objectives\"></a>\n",
-    "## Learning Objectives\n",
-    "*In this lesson, we will go over the folowing:*\n",
-    "\n",
-    "- Jupyter Notebooks\n",
-    "- Data science and the data science workflow.\n",
-    "- Test train split\n",
-    "- Over/underfitting concepts \n",
-    "- Data Science Applications\n",
-    "- AI ethics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "### What Are Some Common Questions Asked in Data Science?\n",
     "\n",
     "**Machine learning more or less asks the following questions:**\n",
@@ -393,7 +373,7 @@
     "> - In case of housing data set discussed above we can build a model that learns how to predict price of a house\n",
     "- The resulted model is a representative of the data used for training \n",
     "\n",
-    "<img src=\"./images/model.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"./images/model.png\" width=\"400\" align=\"center\"/>\n",
     "\n",
     "> - The size of the output model can be alot smaller than the training data "
    ]
@@ -466,16 +446,16 @@
     "#### Data Enrichment \n",
     "\n",
     "- Machine learning algorithms need the data to be engineered before they consume it\n",
-    "<img src=\"./images/garbage.png\" width=\"300\" height=\"300\" align=\"center\"/>\n",
+    "<img src=\"./images/garbage.png\" width=\"300\"  align=\"center\"/>\n",
     "\n",
     "> - We need feature engineering to enrich the raw data \n",
     "\n",
     "Suppose, we want to predict the customers next purchase using a dataset looking like this:\n",
-    "<img src=\"./images/f1.png\" width=\"350\" height=\"350\" align=\"center\"/>\n",
+    "<img src=\"./images/f1.png\" width=\"350\"  align=\"center\"/>\n",
     "\n",
     "How can we enrich this data?\n",
     "\n",
-    "<img src=\"./images/f3.png\" width=\"380\" height=\"380\" align=\"center\"/>\n",
+    "<img src=\"./images/f3.png\" width=\"380\"  align=\"center\"/>\n",
     "Here, creating the new feature “Age” is an example of feature engineering.\n",
     "\n",
     "Now, the steps to do feature engineering are as follows:\n",
@@ -525,7 +505,7 @@
     "### An Example\n",
     "Let’s say we’re trying to build a Machine Learning model for the following data set.\n",
     "\n",
-    "<img src=\"./images/fit1.png\" width=\"450\" height=\"450\" align=\"center\"/>\n",
+    "<img src=\"./images/fit1.png\" width=\"450\"  align=\"center\"/>\n",
     "\n",
     "\n",
     "\n",
@@ -546,7 +526,7 @@
     "Training the Linear Regression model in our example is all about minimizing the total distance (i.e. cost) between the line we’re trying to fit and the actual data points. This goes through multiple iterations until we find the relatively “optimal” configuration of our line within the data set. This is exactly where overfitting and underfitting occur.\n",
     "\n",
     "> In Linear Regression, we would like our model to follow a line similar to the following:\n",
-    "<img src=\"./images/fit2.png\" width=\"450\" height=\"450\" align=\"center\"/>\n",
+    "<img src=\"./images/fit2.png\" width=\"450\"  align=\"center\"/>\n",
     "\n",
     ">The line above could give a very likely prediction for the new input, as, in terms of Machine Learning, the outputs are expected to follow the trend seen in the training set."
    ]
@@ -562,7 +542,8 @@
     "### Overfitting\n",
     "When we run our training algorithm on the data set, we allow the overall cost (i.e. distance from each point to the line) to become smaller with more iterations. Leaving this training algorithm run for long leads to minimal overall cost. However, this means that the line will be fit into all the points (including noise), catching secondary patterns that may not be needed for the generalizability of the model.\n",
     "> Referring back to our example, if we leave the learning algorithm running for long, it cold end up fitting the line in the following manner:\n",
-    "<img src=\"./images/over.png\" width=\"450\" height=\"450\" align=\"center\"/>\n",
+    "\n",
+    "<img src=\"./images/over.png\" width=\"450\"  align=\"center\"/>\n",
     "\n",
     ">This looks good, right? Yes, but is it reliable? Well, not really.\n",
     "\n",
@@ -586,7 +567,7 @@
     "\n",
     ">Underfitting is the case where the model has “ not learned enough” from the training data, resulting in low generalization and unreliable predictions.\n",
     "\n",
-    "<img src=\"./images/under.png\" width=\"450\" height=\"450\" align=\"center\"/>\n",
+    "<img src=\"./images/under.png\" width=\"450\"  align=\"center\"/>\n",
     "\n",
     "\n",
     "\n",
@@ -609,7 +590,7 @@
     "\n",
     "\n",
     "> Data Scientists usually keep parts of the data for testing the model performance\n",
-    "<img src=\"./images/ttsplit.jpg\" width=\"500\" height=\"500\" align=\"center\"/>\n",
+    "<img src=\"./images/ttsplit.jpg\" width=\"500\"  align=\"center\"/>\n",
     "\n",
     "> if we use all the data for training then we do not have any way of evaluating the model performance. \n",
     "\n",
@@ -631,7 +612,7 @@
     "\n",
     "> why to have a fixed test and train split when we can use different combination of test and train data?\n",
     "\n",
-    "<img src=\"./images/cross.png\" width=\"450\" height=\"450\" align=\"center\"/>\n",
+    "<img src=\"./images/cross.png\" width=\"450\"  align=\"center\"/>\n",
     "\n",
     "Instead of using one fixed set of the data for test and train we can use cross validation. \n",
     "> - In Cross Validation we use different parts of the data for test and training purposes to evaluate the model performance\n",
