--- a/Day 1/AI_ML_Concepts.ipynb
+++ b/Day 1/AI_ML_Concepts.ipynb
@@ -60,7 +60,7 @@
     "- What Data Science VS. (Machine Learning Engineer): \n",
     "\n",
     "\n",
-    "<img src=\"./images/onion.png\" width=\"270\" height=\"270\" align=\"center\"/>\n"
+    "<img src=\"./images/onion.png\" width=\"450\"  align=\"center\"/>\n"
    ]
   },
   {
@@ -270,7 +270,7 @@
    "source": [
     "# Step 2. Data Acquisition\n",
     "\n",
-    "** Ideal Data vs. Available Data**  \n",
+    "**Ideal Data vs. Available Data**  \n",
     "\n",
     "Oftentimes, we'll start by identifying the *ideal data* we would want for a project.\n",
     "\n",
@@ -294,7 +294,7 @@
    },
    "source": [
     "\n",
-    "### ** Review the Dataset**\n",
+    "### **Review the Dataset**\n",
     "\n",
     "Take a moment to look through the data description. How closely does the set match the ideal data that you envisioned? Would it be sufficient for our purposes? What limitations does it have?\n",
     "\n",
@@ -367,7 +367,7 @@
    },
    "source": [
     "# Step 3. Modeling\n",
-    "** What is a Model? **\n",
+    "**What is a Model?**\n",
     "\n",
     "- Using Machine Learning algorithms we build a model from input data (image, text, ...)\n",
     "> - In case of housing data set discussed above we can build a model that learns how to predict price of a house\n",
@@ -629,14 +629,14 @@
    },
    "source": [
     "# Step 4. Use Cases\n",
-    "** What are some of the use cases for AI/ML ? **\n",
+    "**What are some of the use cases for AI/ML ?**\n",
     "\n",
     "- Nearly all occupations will be affected by automation\n",
     "> - But only about 5 percent of occupations could be fully automated by currently demonstrated technologies.\n",
     "- Many more occupations have portions of their constituent activities that are automatable: \n",
     "> - we find that about 30 percent of the activities in 60 percent of all occupations could be automated. \n",
     "\n",
-    "<img src=\"./images/usecase.svg\" width=\"500\" height=\"500\" align=\"center\"/>\n",
+    "<img src=\"./images/usecase.svg\" width=\"1000\" align=\"center\"/>\n",
     "\n",
     "> - the size of the output model can be alot smaller than the training data "
    ]
